infra/manifests/radio-dj/icecast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icecast
  namespace: radio-dj
  labels:
    app: icecast
spec:
  type: NodePort
  selector:
    app: icecast
  ports:
    - port: 8100
      targetPort: 8100
      nodePort: 30100
      protocol: TCP
