infra/manifests/radio-dj/liquidsoap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liquidsoap
  namespace: radio-dj
  labels:
    app: liquidsoap
spec:
  type: ClusterIP
  selector:
    app: liquidsoap
  ports:
    - name: telnet
      port: 1234
      targetPort: 1234
      protocol: TCP
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
