infra/manifests/radio-dj/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radio-dj
  namespace: radio-dj
  labels:
    app: radio-dj
spec:
  type: NodePort
  selector:
    app: radio-dj
  ports:
    - port: 8100
      targetPort: 8100
      nodePort: 30100
      protocol: TCP
