infra/manifests/radio-dj/httproute-stream.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: icecast-stream
  namespace: radio-dj
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: istio-system
  hostnames:
    - "stream.brandwhisper.cloud"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: radio-player
          port: 80
          weight: 1
