infra/manifests/radio-dj/radio-player.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radio-player
  namespace: radio-dj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radio-player
  template:
    metadata:
      labels:
        app: radio-player
    spec:
      containers:
      - name: player
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: player-content
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: player-content
        hostPath:
          path: /mnt/arthur/clawd/data
          type: DirectoryOrCreate
      - name: nginx-config
        configMap:
          name: radio-player-nginx-config
          items:
          - key: default.conf
            path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: radio-player
  namespace: radio-dj
spec:
  type: NodePort
  selector:
    app: radio-player
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: radio-player
  namespace: radio-dj
spec:
  hosts:
  - "player.stream.brandwhisper.cloud"
  gateways:
  - istio-system/gateway
  http:
  - route:
    - destination:
        host: radio-player.radio-dj.svc.cluster.local
        port:
          number: 80
